@@ -26,26 +26,30 @@ class sfTasksUpgrade extends sfUpgrade
       $contents = file_get_contents($file);
       $changed = false;
 
-      if (preg_match_all('/\bnew\b\s+\bsf(Doctrine|Propel)(Load|Dump)DataTask\b/i', $contents, $matches))
+      // renamed data task classes
+      if (preg_match_all('/\bnew\b\s+\bsf(Doctrine|Propel)(Load|Dump)DataTask\b/i', $contents, $matches, PREG_OFFSET_CAPTURE))
       {
-        $search  = array('LoadData', 'DumpData');
-        $replace = array('DataLoad', 'DataDump');
-
         foreach ($matches[0] as $match)
         {
-          $contents = str_replace($match, str_ireplace($search, $replace, $match), $contents);
+          list($search, $offset) = $match;
+          $replace = str_ireplace(array('LoadData', 'DumpData'), array('DataLoad', 'DataDump'), $search);
+
+          $contents = substr($contents, 0, $offset).$replace.substr($contents, $offset + strlen($search));
         }
 
         $changed = true;
       }
 
       // sfConfigureDatabaseTask was renamed to sf(Doctrine|Propel)ConfigureDatabaseTask
-      if (preg_match_all('/\bnew\b\s+\bsfConfigureDatabaseTask\b/i', $contents, $matches))
+      if (preg_match_all('/\bnew\b\s+\bsfConfigureDatabaseTask\b/i', $contents, $matches, PREG_OFFSET_CAPTURE))
       {
         $newTask = sprintf('sf%sConfigureDatabaseTask', ucfirst(sfConfig::get('sf_orm')));
         foreach ($matches[0] as $match)
         {
-          $contents = str_replace($match, str_ireplace('sfConfigureDatabaseTask', $newTask, $match), $contents);
+          list($search, $offset) = $match;
+          $replace = str_ireplace('sfConfigureDatabaseTask', $newTask, $search);
+
+          $contents = substr($contents, 0, $offset).$replace.substr($contents, $offset + strlen($search));
         }
 
         $changed = true;
