@@ -12,7 +12,7 @@ require_once(dirname(__FILE__).'/../../bootstrap/unit.php');
 
 $t = new lime_test(5);
 
-$w = new sfWidgetFormInput();
+$w = new sfWidgetFormInputText();
 
 // ->render()
 $t->diag('->render()');
@@ -20,6 +20,6 @@ $t->is($w->render('foo'), '<input type="text" name="foo" id="foo" />', '->render
 $t->is($w->render('foo', 'bar'), '<input type="text" name="foo" value="bar" id="foo" />', '->render() can take a value for the input');
 $t->is($w->render('foo', '', array('type' => 'password', 'class' => 'foobar')), '<input type="password" name="foo" value="" class="foobar" id="foo" />', '->render() can take HTML attributes as its third argument');
 
-$w = new sfWidgetFormInput(array(), array('class' => 'foobar'));
+$w = new sfWidgetFormInputText(array(), array('class' => 'foobar'));
 $t->is($w->render('foo'), '<input class="foobar" type="text" name="foo" id="foo" />', '__construct() can take default HTML attributes');
 $t->is($w->render('foo', null, array('class' => 'barfoo')), '<input class="barfoo" type="text" name="foo" id="foo" />', '->render() can override default attributes');
