@@ -12,8 +12,8 @@ require_once(dirname(__FILE__).'/../../bootstrap/unit.php');
 
 $t = new lime_test(16);
 
-$w1 = new sfWidgetFormInput();
-$w2 = new sfWidgetFormInput();
+$w1 = new sfWidgetFormInputText();
+$w2 = new sfWidgetFormInputText();
 $ws = new sfWidgetFormSchema(array('w1' => $w1));
 
 $w = new sfWidgetFormSchemaDecorator($ws, "<table>\n%content%</table>");
